<resources>
    <string name="app_name">Expense Logger</string>
    <string name="expense_logger">Expense Logger</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="re_password">Re-enter Password</string>

    <string name="expese_categories"><u>Expense Categories</u></string>
    <string name="currency"><u>Currency</u></string>

    <string-array name="filterBy">
        <item>Today</item>
        <item>This week</item>
        <item>This month</item>
        <item>This year</item>
    </string-array>

    <string-array name="currencies">
        <item>CAD</item>
        <item>USD</item>
        <item>GBP</item>
        <item>EUR</item>
        <item>CNY</item>
        <item>JPY</item>
    </string-array>
</resources>
